--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 name = "dns-syncer"
 path = "cmd/main.rs"
 
-
 [dependencies]
-
+reqwest = { version = "0.12.15", features = ["json"] }
+tokio = { version = "1", features = ["rt", "macros", "sync"] }
+async-trait = { version = "0.1.73" }
