--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { version = "1", features = ["rt", "macros", "sync"] }
 async-trait = { version = "0.1.73" }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = { version = "0.9.34" }
+serde_json = { version = "1.0.140" }
