--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ async-trait = { version = "0.1.73" }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = { version = "0.9.34" }
 serde_json = { version = "1.0.140" }
+clap = { version = "4.5.35", features = ["derive"] }
