--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = { version = "0.9.34" }
 serde_json = { version = "1.0.140" }
 clap = { version = "4.5.35", features = ["derive"] }
+log = { version = "0.4.27" }
